# mcc

./: CMakeLists.txt  LOG.md  Makefile  README.md  ast_dump.txt  compiler  main.cc
examples/: args.c  args.s  array.c  array.s  assign.c  assign.s  comp.c  comp.s  enum.c  funcs.c  funcs.s  global.c  global.s  if.c  if.s  inc.c  inc.s  labels.c  local.c  local.s  ops.c  or.c  or.s  out  out.s  pointers.c  pointers.s  printint.c  ptr_and_arrays.c  ptr_and_arrays.s  static.c  static.s  switch.c  switch.s  typedef.c  typedef.s  types.c  types.s  while.c  while.s
src/: AstDumper.cc  AstDumper.h  CodeGenX86.cc  CodeGenX86.h  Compiler.cc  Compiler.h  ControlFlowChecker.cc  ControlFlowChecker.h  ErrorReporter.cc  ErrorReporter.h  Evaluator.cc  Evaluator.h  ParseException.h  Parser.cc  Parser.h  Scanner.cc  Scanner.h  SymbolTable.cc  SymbolTable.h  Token.h  TokenType.cc  TokenType.h  Type.cc  Type.h  TypeChecker.cc  TypeChecker.h  Visitor.h  ast.cc  ast.h  common.h
tests/: ast_dump.txt  input0  input2  input3  input4  run_tests.py  test0.c  test0.input  test0.output  test1.c  test1.input  test1.output  test10.c  test10.input  test11  test11.c  test11.input  test12.c  test12.input  test13  test13.c  test13.output  test14  test14.c  test14.input  test14.output  test15.c  test15.input  test15.output  test16.c  test16.input  test16.output  test17  test17.c  test17.input  test17.output  test18.c  test18.input  test18.output  test19  (+123 more)
